Sat Feb 4 11:38:37 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/run_test.pl:

	  Added functionality to run and analyze ACE tests for VxWorks from the
	  autobuild process (depending on target features).

	* tests/Multicast_Test.cpp:

	  Fixed sloppy resource management (sockets) leading to problems on VxWorks.

	* tests/TP_Reactor_Test.cpp:

	  Fixed compiletime test around pthread_sigmask() call so it now compiles
	  correctly for (non-WIN32) platforms having threads but no pthread_sigmask()
	  (f.i. VxWorks).

Sat Feb 4 11:32:37 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_time.inl:

	  Made ACE_OS::gethrtime() for VxWorks always (also on PENTIUM) go through
          clock_gettime() because the RDTSC somehow does not work correctly (all
	  HiResTime related tests fail) and clock_gettime() does.

Fri Feb 4 14:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Hashable.inl:
          Replaced c-style cast with C++ const_cast

Thu Feb  3 09:25:38 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Ensure that TAO_ROOT is set if it is a tao or a ciao project.

Thu Feb 3 12:43:37 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/rules.local.GNU:
          Added build rule for .rc files in a static build. Thanks to
          Arto Jalkanen <ajalkane at gmail dot com> for reporting this.

Thu Feb 3 10:36:37 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          Added ACE_LACKS_UNIX_SYSLOG

        * ace/Log_Msg_UNIX_Syslog.{h,cpp}:
          Only check for the ACE_LACKS_UNIX_SYSLOG define, not for ACE_WIN32.
          Makes it a little easier to maintain and then this class is also
          added to the doxygen documentation

Thu Feb 3 10:28:37 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd: